# sam-gov-mcp

./: .env.example  .gitignore  BUILD.md  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml
src/sam_gov_mcp/: __init__.py  client.py  constants.py  server.py
tests/: test_client.py  test_server.py
