[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sam-gov-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for searching federal contract opportunities on SAM.gov."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Adam Barrett" }]
keywords = ["mcp", "model-context-protocol", "sam.gov", "federal", "procurement", "govcon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/ab75173/sam-gov-mcp"
Repository = "https://github.com/ab75173/sam-gov-mcp"
Issues = "https://github.com/ab75173/sam-gov-mcp/issues"

[project.scripts]
sam-gov-mcp = "sam_gov_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sam_gov_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
